<resources>
    <string name="app_name">FundatecHeros</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="report_name">Informe seu nome</string>
    <string name="report_email">Informe seu e-mail</string>
    <string name="report_password">Informe sua senha</string>
    <string name="login">Login</string>
    <string name="button_create_account">Criar conta</string>
    <string name="new_user">Novo por aqui?</string>
    <string name="user_created">Usuário criado com sucesso 🥳</string>
    <string name="report_nameHero">Informe o nome do seu personagem</string>
    <string name="report_description">Informe a descrição do seu personagem</string>
    <string name="report_url_image">Informe a URL da imagem do seu personagem</string>
    <string name="button_create_hero">Criar personagem</string>
    <string name="email_error">Digite um email válido</string>
    <string name="password_error">Digite uma senha válida</string>
    <string name="login_error">Erro ao fazer login! Tente novamente mais tarde! 😕</string>
    <string name="user_created_error">Ocorreu um erro ao criar o usuário</string>
    <string name="hero_created_error">Ocorreu um erro ao criar o personagem</string>
    <string name="report_age">Informe a idade do seu personagem</string>
    <string name="report_birthday">Informe a data de aniversário do seu personagem</string>
    <string name="hero_type_error">Selecione o tipo de personagem</string>
    <string name="universe_type_error">Selecione o universo do seu personagem</string>
    <string name="sucess_hero_create">Personagem criado com sucesso</string>
    <string name="hero_delete_successful">Personagem deletado com sucesso</string>
    <string name="hero_detail_description">Descrição: %1$s</string>
    <string name="hero_detail_age">Idade: %1$s</string>
    <string name="hero_detail_birthday">Nascimento: %1$s</string>

    <string-array name="type_hero">
        <item>Selecione o tipo de personagem</item>
        <item>Herói</item>
        <item>Vilão</item>
    </string-array>

    <string-array name="type_franchise">
        <item>Selecione a franquia</item>
        <item>Marvel</item>
        <item>DC</item>
    </string-array>

</resources>