<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.views.heros.view.HeroActivity">

    <ImageView
        android:id="@+id/hero"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/til_nameHero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nameHero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/til_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/nameHero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report_nameHero"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/til_url_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_nameHero"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/descripion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report_description"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_url_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/type_hero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_description">

        <EditText
            android:id="@+id/url_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report_url_image"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/type_hero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/type_franchise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_url_image" />

    <Spinner
        android:id="@+id/type_franchise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/til_age_Hero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_hero" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_age_Hero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_franchise">

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/age_Hero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Informe a idade do personagem"
            android:imeOptions="actionDone"
            android:inputType="date"
            app:mask="##/##/####"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create_new_hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_hero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_age_Hero"
        app:layout_constraintVertical_bias="0.598" />

</androidx.constraintlayout.widget.ConstraintLayout>